# KLab-solution

./: README.md  solution.sql
simple_rest_app/: README.md  pyproject.toml
simple_rest_app/simple_rest_app/: main.py
simple_rest_app/tests/: test_main.py
