[tool.poetry]
name = "simple-rest-app"
version = "0.1.0"
description = ""
authors = ["Alex Pulichkin <pulichkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
fastapi = "^0.104.1"
httpx = "^0.25.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "simple_rest_app.main:run"
